--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.3</version>
         </dependency>
+             <dependency>
+            <groupId>juanPendencie</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.3</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
